.gitignore: add /smoke_magicfolder/, delete obsolete stuff.
Signed-off-by: Daira Hopwood <daira@jacaranda.org>

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ zope.interface-*.egg
 /tmp*
 /*.patch
 /dist/
-/twisted/plugins/dropin.cache
 /tahoe-deps/
 /tahoe-deps.tar.gz
 /.coverage
@@ -38,3 +37,4 @@ zope.interface-*.egg
 /.tox/
 /docs/_build/
 /coverage.xml
+/smoke_magicfolder/
