--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /bin/tahoe-script.py
 
 /.built
-/src/allmydata_tahoe.egg-info/
+/src/tahoe_lafs.egg-info/
 Twisted-*.egg
 zope.interface-*.egg
 .pc
