--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 language: python
+os:
+ - "linux"
+ - "osx"
 cache: pip
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -13,6 +16,10 @@ before_install:
   - git fetch --depth=1000
   - python misc/build_helpers/show-tool-versions.py
 install:
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then echo installing on osx...; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install python; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
   - pip install coverage coveralls
 before_script:
   - pip install -e .
