--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 python:
   - "2.7"
-  - "pypy"
 before_install:
   - sh -c set
   - git config --global user.email "travis-tahoe@tahoe-lafs.org"
@@ -22,6 +21,9 @@ install:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
   - pip install coverage coveralls
 before_script:
+  - env
+  - which python && python --version
+  - which tox && tox --version
   - pip install -e .
 script:
   - coverage run --branch --source=src/allmydata `which tahoe` --version-and-path debug trial --rterrors --reporter=timing
