--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
 before_script:
   - env
   - which python && python --version
+  - pip install --upgrade pip
   - pip install -e .
 script:
   - coverage run --branch --source=src/allmydata `which tahoe` --version-and-path debug trial --rterrors --reporter=timing
