--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ install:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install python; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then pip install --upgrade pip; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y python-pip; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export PATH=/usr/bin:$PATH; fi
   - pip install coverage coveralls
 before_script:
   - env
