--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-sudo: false
-language: python
+sudo: true
+os:
+ - "linux"
+ - "osx"
 cache: pip
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -13,7 +15,15 @@ before_install:
   - git fetch --depth=1000
   - python misc/build_helpers/show-tool-versions.py
 install:
-  - pip install coveralls tox
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then echo installing on osx...; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install python; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install coverage coveralls tox; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install coverage coveralls tox; fi
+before_script:
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install -e .; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -e .; fi
 script:
   - tox -e coverage
 after_success:
