Add the dot travis dot yaml file from my 2789.linux_mac_travis.0 branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-sudo: false
-language: python
+sudo: true
+os:
+ - "linux"
+ - "osx"
 cache: pip
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -13,11 +15,18 @@ before_install:
   - git fetch --depth=1000
   - python misc/build_helpers/show-tool-versions.py
 install:
-  - pip install coverage coveralls
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then echo installing on osx...; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install python; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install coverage coveralls tox; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install coverage coveralls tox; fi
 before_script:
-  - pip install -e .
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install -e .; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -e .; fi
 script:
-  - coverage run --branch --source=src/allmydata `which tahoe` --version-and-path debug trial --rterrors --reporter=timing
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo tox -e coverage; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then tox -e coverage; fi
 after_success:
   coveralls
 notifications:
