--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,10 @@ before_install:
   - python misc/build_helpers/show-tool-versions.py
 install:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then echo installing on osx...; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew install python; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update && brew install python; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=/usr/local/bin:$PATH; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install coverage coveralls tox; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install coverage coveralls tox; fi
-before_script:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install -e .; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -e .; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo pip install coveralls tox; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install coveralls tox; fi
 script:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo tox -e coverage; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then tox -e coverage; fi
