--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install:
   - pip install coveralls
 before_script:
-  - pip install -e .[test]
+  - pip install --find-links=https://tahoe-lafs.org/deps -e .[test]
 script:
   - coverage run --branch --source=src/allmydata `which tahoe` --version-and-path debug trial --rterrors --reporter=timing
 after_success:
