make tox work on S4 branch (--find-links)

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist = py27
 
 [testenv]
 passenv = USERPROFILE HOMEDRIVE HOMEPATH
+install_command = pip install --find-links=https://tahoe-lafs.org/deps/ {opts} {packages}
 deps = --editable=.[test]
 commands =
          tahoe --version
@@ -16,6 +17,7 @@ commands =
 [testenv:deprecations]
 basepython=python2.7
 passenv = USERPROFILE HOMEDRIVE HOMEPATH
+install_command = pip install --find-links=https://tahoe-lafs.org/deps/ {opts} {packages}
 deps = --editable=.[test]
 setenv =
          PYTHONWARNINGS=default::DeprecationWarning
@@ -27,6 +29,7 @@ basepython=python2.7
 passenv = USERPROFILE HOMEDRIVE HOMEPATH
 setenv =
          PYTHONWARNINGS=default::DeprecationWarning
+install_command = pip install --find-links=https://tahoe-lafs.org/deps/ {opts} {packages}
 deps =
      --editable=.[test]
      git+https://github.com/twisted/twisted
