--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - hash -r
   - echo $PATH; which python; which pip
   - pip --version
-  - pip install -U pip
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -U pip; fi
   - pip --version
   - pip install --user coveralls tox
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
