--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ install:
   - echo $PATH; which python; which pip
   - pip --version
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -U pip; fi
-  - pip --version
-  - pip install --user coveralls tox
+  - pip list
+  - pip install --user coveralls tox wheel
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
   - echo $PATH; which python; which pip; which tox
   - python misc/build_helpers/show-tool-versions.py
