--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
   - echo $PATH; which python; which pip; which tox
   - python misc/build_helpers/show-tool-versions.py
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -e .; fi
 script:
   - echo $PATH; which python; which pip; which tox
   - tox -e coverage
