--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: true
 os:
  - "linux"
  - "osx"
+# xcode7 gives us OS-X 10.10, which gives us newer OpenSSL
+osx_image: xcode7
 cache: pip
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
