--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ install:
 #  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update && brew install python; fi
   - hash -r
   - echo $PATH; which python; which pip; python --version
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then wget https://bootstrap.pypa.io/get-pip.py && python ./get-pip.py; fi
   - pip --version
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install -U pip; fi
   - pip list
   - pip install --user coveralls tox wheel
-  - pip install --user cryptography
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
   - echo $PATH; which python; which pip; which tox
   - python misc/build_helpers/show-tool-versions.py
