--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
 # ~/.local/bin is on $PATH by default, but on OS-X, --user puts it elsewhere
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then wget https://bootstrap.pypa.io/get-pip.py && sudo python ./get-pip.py; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then pip install --user watchdog; fi
   - pip list
   - pip install --user coveralls tox
   - echo $PATH; which python; which pip; which tox
