--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=$HOME/Library/Python/2.7/bin:$PATH; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then wget https://bootstrap.pypa.io/get-pip.py && sudo python ./get-pip.py; fi
   - pip list
-  - pip install --user coveralls tox
+  - pip install --user codecov tox
   - echo $PATH; which python; which pip; which tox
   - python misc/build_helpers/show-tool-versions.py
 script:
@@ -30,7 +30,7 @@ script:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then tox; else tox -e coverage; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tox -e integration; fi
 after_success:
-  coveralls
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then codecov; fi
 notifications:
   email: false
   irc:
