--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,15 +34,17 @@ test_script:
     %PYTHON%\Scripts\tox.exe -e py
 
 after_test:
-  # This step builds your wheels.
+  # This builds the main tahoe wheel, and wheels for all dependencies.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
   # interpreter
   - |
     %PYTHON%\python.exe setup.py bdist_wheel
+    %PYTHON%\python.exe -m pip wheel -w dist .
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
+  # "pip wheel -w dist ." puts all the dependency wheels there too
   - path: dist\*
 
 #on_success:
