Run trial tests in 4 processes.

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps = --editable=.[test]
 commands =
          pyflakes src static misc setup.py
          tahoe --version
-         trial --rterrors {posargs:allmydata}
+         trial -j 4 --rterrors {posargs:allmydata}
 
 [testenv:integration]
 commands =
