--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,13 @@
 
 [tox]
 envlist = py27
-minversion = 1.7
+minversion = 2.4.0
 
 [testenv]
+basepython = python2.7
 passenv = USERPROFILE HOMEDRIVE HOMEPATH
-# the default install is non-(--editable), and would displace our -e .[test]
-skip_install = True
-deps = --editable=.[test]
+usedevelop = true
+extras = test
 commands =
          pyflakes src static misc setup.py
          tahoe --version
@@ -24,9 +24,6 @@ commands =
 
 [testenv:coverage]
 # coverage (with --branch) takes about 65% longer to run
-passenv = USERPROFILE HOMEDRIVE HOMEPATH
-skip_install = True
-deps = --editable=.[test]
 commands =
          pyflakes src static misc setup.py
          tahoe --version
@@ -34,9 +31,6 @@ commands =
          coverage xml
 
 [testenv:codechecks]
-passenv = USERPROFILE HOMEDRIVE HOMEPATH
-skip_install = True
-deps = --editable=.[test]
 commands =
          pyflakes src static misc setup.py
          python misc/coding_tools/check-umids.py src
@@ -48,23 +42,15 @@ commands =
          python misc/coding_tools/check-interfaces.py
 
 [testenv:deprecations]
-basepython=python2.7
-passenv = USERPROFILE HOMEDRIVE HOMEPATH
-skip_install = True
-deps = --editable=.[test]
 setenv =
          PYTHONWARNINGS=default::DeprecationWarning
 commands =
          python misc/build_helpers/run-deprecations.py --warnings=_trial_temp/deprecation-warnings.log trial --rterrors {posargs:allmydata}
 
 [testenv:upcoming-deprecations]
-basepython=python2.7
-passenv = USERPROFILE HOMEDRIVE HOMEPATH
 setenv =
          PYTHONWARNINGS=default::DeprecationWarning
-skip_install = True
 deps =
-     --editable=.[test]
      git+https://github.com/twisted/twisted
      git+https://github.com/warner/foolscap
 commands =
