let's see child process output

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
 [testenv:integration]
 commands =
 	 # NOTE: 'run with "py.test --keep-tempdir -s -v integration/" to debug failures'
-	 py.test -v integration/
+	 py.test --capture=no -v integration/
 
 [testenv:coverage]
 # coverage (with --branch) takes about 65% longer to run
