travis: only run integration test if the tor install succeeded
travis apparently behaves like buildbot's ERROR_UPON_ERROR, rather that
HALT_UPON_ERROR, and if the tor install fails, then the integration test's
last step is certain to fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ install:
 script:
   - tox -e codechecks
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then tox; else tox -e coverage; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then /bin/bash integration/install-tor.sh; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then tox -e integration; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then /bin/bash integration/install-tor.sh && tox -e integration; fi
 after_success:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then codecov; fi
 notifications:
