--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 dist: trusty
 sudo: required
-os:
- - "linux"
- - "osx"
 cache: pip
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
-python:
-  - "2.7"
-  - "pypy"
 before_install:
   - sh -c set
   - git config --global user.email "travis-tahoe@tahoe-lafs.org"
@@ -38,6 +32,9 @@ notifications:
       - "%{repository}#%{build_number} [%{branch}: %{commit} by %{author}] %{message}"
       - "Changes: %{compare_url} | Details: %{build_url}"
 matrix:
-  allow_failures:
-    - python: "pypy"
+  include:
+  - os: linux
+  - os: linux
+    env: LANG=
+  - os: osx
   fast_finish: true
