travis: explicitly set LANG on all builds (to C or en_US.UTF-8)

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ notifications:
 matrix:
   include:
   - os: linux
+    env: LANG=en_US.UTF-8
   - os: linux
     env: LANG=C
   - os: osx
+    env: LANG=en_US.UTF-8
   fast_finish: true
