--- a/tox.ini
+++ b/tox.ini
@@ -105,6 +105,7 @@ commands =
 extras =
 deps =
     .
+    packaging
     pyinstaller
 # Setting PYTHONHASHSEED to a known value assists with reproducible builds.
 # See https://pyinstaller.readthedocs.io/en/stable/advanced-topics.html#creating-a-reproducible-build
