travis: add pyinstaller job
We aren't yet using these artifacts (we plan to build the production ones on
our buildbot machines), but this will make sure we don't break the process.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,13 @@ matrix:
   - os: linux
     env: T=codechecks LANG=en_US.UTF-8
   - os: linux
+    env: T=pyinstaller LANG=en_US.UTF-8
+  - os: linux
     env: T=py27 LANG=C
   - os: osx
     env: T=py27 LANG=en_US.UTF-8
+    language: generic  # "python" is not available on OS-X
+  - os: osx
+    env: T=pyinstaller LANG=en_US.UTF-8
     language: generic  # "python" is not available on OS-X
   fast_finish: true
