--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,8 +37,11 @@ after_test:
   # This builds the main tahoe wheel, and wheels for all dependencies.
   # Again, you only need build.cmd if you're building C extensions for
   # 64-bit Python 3.3/3.4. And you need to use %PYTHON% to get the correct
-  # interpreter
+  # interpreter. If _trial_temp still exists, the "pip wheel" fails on
+  # _trial_temp\local_dir (not sure why).
   - |
+    copy _trial_temp\test.log test.log
+    rd /s /q _trial_temp
     %PYTHON%\python.exe setup.py bdist_wheel
     %PYTHON%\python.exe -m pip wheel -w dist .
 
@@ -47,7 +50,7 @@ artifacts:
   # "pip wheel -w dist ." puts all the dependency wheels there too
   # this gives us a zipfile with everything
   - path: 'dist\*'
-  - path: _trial_temp\test.log
+  - path: test.log
     name: Trial test.log
 
 #on_success:
