--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -10,3 +10,8 @@ queries:
   # zope.interface choice to exclude self from method signatures.  So, turn it
   # off.
   - exclude: "py/call/wrong-arguments"
+
+  # The premise of this query is broken.  The errors it produces are nonsense.
+  # There is no such thing as a "procedure" in Python and "None" is not
+  # meaningless.
+  - exclude: "py/procedure-return-value-used"
