--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@
     start_string = ".. towncrier start line"
     title_format = "{version} ({project_date})"
     issue_format = "`#{issue} <https://github.com/tahoe-lafs/tahoe-lafs/issues/{issue}>`_"
+    underlines = [
+        "'",
+        "-",
+        "~",
+    ]
 
     [[tool.towncrier.type]]
         directory = "incompat"
