--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
     filename = "NEWS.rst"
     directory = "newsfragments"
     start_string = ".. towncrier start line"
-    title_format = "{version} ({project_date})"
+    title_format = "Release {version} ({project_date})"
     issue_format = "`#{issue} <https://github.com/tahoe-lafs/tahoe-lafs/issues/{issue}>`_"
     underlines = [
         "'",
