--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,8 @@ commands =
          coverage xml
 
 [testenv:codechecks]
+whitelist_externals =
+		    /bin/mv
 commands =
          pyflakes src static misc setup.py
          python misc/coding_tools/check-umids.py src
@@ -60,7 +62,7 @@ commands =
 	 #
 	 # Some discussion is available at
 	 # https://github.com/pypa/pip/issues/5696
-	 mv towncrier.pyproject.toml pyproject.toml
+	 /bin/mv towncrier.pyproject.toml pyproject.toml
 
 	 # If towncrier.check fails, you forgot to add a towncrier news
 	 # fragment explaining the change in this branch.  Create one at
