--- a/towncrier.pyproject.toml
+++ b/towncrier.pyproject.toml
@@ -46,3 +46,8 @@
         directory = "other"
         name = "Other Changes"
         showcontent = true
+
+    [[tool.towncrier.type]]
+        directory = "misc"
+        name = "Miscellaneous"
+        showcontent = false
