does this work?

--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,8 @@ commands =
 	 # https://github.com/pypa/pip/issues/5696
 	 /bin/mv towncrier.pyproject.toml pyproject.toml
 
+	 pip install --upgrade 'git+ssh://git@github.com/leastauthority/towncrier.git@9366f33#egg=towncrier'
+
 	 # If towncrier.check fails, you forgot to add a towncrier news
 	 # fragment explaining the change in this branch.  Create one at
 	 # `newsfragments/<ticket>.<change type>` with some text for the news
