travis cannot do git+ssh, try this instead

--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,7 @@ commands =
 	 # https://github.com/pypa/pip/issues/5696
 	 /bin/mv towncrier.pyproject.toml pyproject.toml
 
-	 pip install --upgrade 'git+ssh://git@github.com/leastauthority/towncrier.git@9366f33#egg=towncrier'
+	 pip install --upgrade 'https://github.com/LeastAuthority/towncrier/archive/report-git-failure-output.zip'
 
 	 # If towncrier.check fails, you forgot to add a towncrier news
 	 # fragment explaining the change in this branch.  Create one at
